--- a/client/client.less
+++ b/client/client.less
@@ -6,6 +6,7 @@
 
 body {
     background-color: @very_dark_green;
+    font-family: sans-serif;
 }
 .container {
     width: 1200px;
@@ -18,7 +19,11 @@ body {
     text-align: center;
     padding: 7px;
 }
-
+.clear:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 .navbar {
     margin: 0 0 15px 0;
 
@@ -64,4 +69,80 @@ body {
     font-size: 16pt;
     color: white;
     padding: 15px;
+}
+
+.list {
+    width: 900px;
+    background-color: @green;
+    padding: 10px;
+    overflow: auto;
+    float: left;
+    .base {
+        @width: 180px;
+        border: 1px solid white;
+        width: @width;
+        padding: 10px;
+        margin: 5px 10px;
+        color: white;
+        float: left;
+        overflow: auto;
+        .name {
+            text-decoration: underline;
+            font-size: 15pt;
+        }
+        .img {
+            @img_size: @width - 10px;
+            @img_margin: (@width - @img_size) / 2;
+            width: @img_size;
+            height: @img_size;
+            margin: 5px @img_margin;
+        }
+        .about {
+            font-size: 10pt;
+        }
+        .link {
+            font-size: 10pt;
+            color: white;
+            float: right;
+        }
+        .link:hover {
+            color: #aaa;
+        }
+    }
+    .base:hover {
+        background-color: @light_green;
+    }
+}
+.filters {
+    color: white;
+    width: 250px;
+    float: left;
+    background-color: @green;
+    padding: 10px;
+    overflow: auto;
+    ul {
+        list-style-type: none;
+    }
+    .filter {
+        font-size: 13pt;
+    }
+    .active_false {
+        color: red;
+    }
+    .active_true {
+        color: @light_green;
+    }
+}
+.new_base {
+    background-color: @green;
+    padding: 10px;
+    .text {
+        width: 300px;
+        display: inline-block;
+        margin: 5px 0;
+    }
+    input {
+        display: inline-block;
+        margin: 5px 0;
+    }
 }
